--- a/index.html
+++ b/index.html
@@ -82,10 +82,7 @@
               </span>
             </div>
             <span class="small">
-              Blolc,k ot the haeers wR7 the esih addasQ Oignalls Kaoa Windbrealker Iacket- prt o6the Caoal
-              Collectilo- Regul, 6t is eased.
-              bls not solpp. ald perfect fo ay actviSg- pain-woven jacket speci&cally colnstcte fo heedom
-              of ovemen
+              Whatever your style is, Beardbrand Styling Balm is versatile enough to handle it. Designed to work with all hair types, it provides enough hold to keep thick, curly hair under control, keep thinner hair from falling flat, and keep the most unruly beards inline—all while keeping your hair flexible and touchable (no hard, stiff, crunchy hair here).
             </span>
             <div class="icons">
               <i class="fas fa-shopping-bag"></i>
